deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rehearsal-room
  labels:
    app: rehearsal-room
spec:
  selector:
    app: rehearsal-room
  ports:
    - name: http
      port: 80
      targetPort: http
